<resources>
    <string name="app_name">Pencatatan Barang</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="description">description</string>
    <string name="heroes_name">heroes name</string>
    <string name="search_hint">Masukkan Kata</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kecap">kecap</string>
    <string name="mie_instan">mie instan</string>
    <string name="minyak">minyak</string>
    <string name="susu">susu</string>
    <string name="saeden">sarden</string>
    <string name="tepung_terigu">tepung terigu</string>
    <string name="Kecap">Kecap</string>
    <string name="Mie_Instan">Mie Instan</string>
    <string name="Minyak">Minyak</string>
    <string name="Susu">Susu</string>
    <string name="Sarden">Sarden</string>
    <string name="Tepung_Terigu">Tepung Terigu</string>
    <string name="sarden">Sarden</string>
</resources>